[Fix] Align D18 mobile nav-badge

--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -147,6 +147,7 @@
 		&__ressorts-item--featured
 			a
 				vertical-align: remify(-10px)
+				transform: translateY(remify(8px))
 		&__ressorts-item--has-label
 			clear: left
 			display: list-item
